# eom

./: CMakeLists.txt  README.md  build_notes.txt  old_cmake_lists.txt  set_clang.sh  todo.txt
cases/: cleanup.sh  doc.emx  etalon2.emx  gen_test.emx  gj_40x40.emx  gp_access.emx  gp_vis_azel.emx  gp_vis_azel.lis  gravity_model.emx  kep_fandg.emx  lageos2.emx  molniya.emx  oe.emx  oe_vinti.emx  roe.emx  roe_xfer.emx  sec_j2_j2.emx  sgp4_etalon2.emx  sgp4_lageos2.emx  sgp4_starlette.emx  sp_test.emx  starlette.emx  sunmoon.emx  vinti.emx  vinti_mod.emx
etc/: interp.c  interp.f  interp.readme
include/: SGP4.h  Vinti.h  astro_adams.h  astro_adams_4th.h  astro_attitude.h  astro_build.h  astro_composite_ephemeris.h  astro_deq.h  astro_earth_surf.h  astro_earth_xt.h  astro_ecfeci_sys.h  astro_egm_coeff.h  astro_eop_sys.h  astro_ephemeris.h  astro_ephemeris_file.h  astro_fandg.h  astro_force_model.h  astro_gauss_jackson.h  astro_generate.h  astro_gj_lite.h  astro_gpx.h  astro_granule.h  astro_gravity.h  astro_gravity_jn.h  astro_gravity_std.h  astro_gravt.h  astro_ground_point.h  astro_ground_station.h  astro_hermite1_eph.h  astro_hermite1_tc_eph.h  astro_kepler.h  astro_kepler_prop.h  astro_keplerian.h  astro_math.h  astro_meeus_t47.h  astro_moon_meeus.h  astro_null_ephemeris.h  astro_orbit_def.h  astro_orbital_elements.h  astro_oscj2.h  (+80 more)
src/: SGP4.cpp  Vinti6.c  astro_adams.cpp  astro_adams_4th.cpp  astro_build_celestial.cpp  astro_build_ephemeris.cpp  astro_build_orbit.cpp  astro_build_rel_orbit.cpp  astro_composite_ephemeris.cpp  astro_deq.cpp  astro_earth_surf.cpp  astro_earth_xt.cpp  astro_ecfeci_sys.cpp  astro_eop_sys.cpp  astro_fandg.cpp  astro_generate_xfer_orbit.cpp  astro_gpx.cpp  astro_gravity_jn.cpp  astro_gravity_std.cpp  astro_ground_point.cpp  astro_ground_station.cpp  astro_hermite1_eph.cpp  astro_hermite1_tc_eph.cpp  astro_kepler.cpp  astro_kepler_prop.cpp  astro_keplerian.cpp  astro_moon_meeus.cpp  astro_orbit_def.cpp  astro_print_ephemeris.cpp  astro_propagator_config.cpp  astro_regularize.cpp  astro_rel_orbit_def.cpp  astro_rk4.cpp  astro_rk4s.cpp  astro_secular_j2.cpp  astro_sgp4.cpp  astro_sp3_chebyshev.cpp  astro_sp3_ephem.cpp  astro_sp3_hermite.cpp  astro_sp3_orbit.cpp  (+53 more)
test/cross/: Makefile  cross.cpp
test/fact/: Makefile  fact.cpp
test/gauss_fg/: Makefile  gauss_fg.cpp
test/ground_point/: Makefile  ground_point.cpp
test/meme/: Makefile  meme.cpp
test/rdot/: Makefile  rdot.cpp
test/rhat_dot/: Makefile  rhat_dot.cpp
util/: eom_logo.m
util/axs_dt/: README.md  axs_dt.m  driver_axs_dt.m  orbital_w.m
util/crd/: README.md  README_CRD  ls.txt
util/crd/include/: crd.h
util/crd/src/: Makefile  echo_crd.c  read_crd.c
util/egm/: Makefile  README.md  egm.cpp
util/jpl_eph/: README.md  asc2eph.f  gen_eom_eph.f  geteph.f  make_eom_eph.f  notes.txt  rates.C  testeph.f
util/sgp4/: Makefile  README.md  sgp4_app.cpp
